tests/analyzer/fail/enum-backing-unspec-int.api
// expected: 6000

type f1 = enum(usize) {a};
